--- a/main.tex
+++ b/main.tex
@@ -237,6 +237,9 @@
 \DeclareMathOperator{\Ann}{Ann}
 
 \DeclareMathOperator{\trdeg}{\mathrm{tr} \deg}
+
+% commutative
+\DeclareMathOperator{\Spec}{Spec}
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
 
