Update hw week10

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -184,6 +184,7 @@
 \newcommand{\Cb}{\mathbb{C}}
 \newcommand{\Hb}{\mathbb{H}}
 \newcommand{\Fb}{\mathbb{F}}
+\newcommand{\Ab}{\mathbb{A}}
 \newcommand{\Fbx}{\mathbb{F}^\times}
 \newcommand{\Qbx}{\mathbb{Q}^\times}
 \newcommand{\Rbx}{\mathbb{R}^\times}
