--- a/hw/week10.tex
+++ b/hw/week10.tex
@@ -49,3 +49,18 @@
       Show that $\Psi$ (and $\Psi^{-1}$) will give an isom. of $V_1$ and $V_2$.
   \end{enumerate}
 \end{exercise}
+
+\begin{exercise} \mbox{}
+  \begin{enumerate}
+    \item Show that if $V = \Vc(y-x^2) \subseteq \Ab^2_\Cb$, then
+      \[
+        \deffunc{f}{\Ab_\Cb^1}{V}{t}{(t, t^2)}
+        \quad \text{is an isom.}
+      \]
+    \item Show that if $V = \Vc(y^2-x^3) \subseteq \Ab^2_\Cb$, then
+      \[
+        \deffunc{f}{\Ab_\Cb^1}{V}{t}{(t^2, t^3)}
+        \quad \text{is bijective but not an isom.}
+      \]
+  \end{enumerate}
+\end{exercise}
