--- a/main.tex
+++ b/main.tex
@@ -364,6 +364,7 @@
 \include{fields/week8}
 \include{commutative/week1}
 \include{commutative/week2}
+\include{commutative/week3}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
