update hw week10

--- a/hw/week10.tex
+++ b/hw/week10.tex
@@ -20,7 +20,7 @@
 \begin{exercise} \mbox{}
   \begin{enumerate}
     \item Show that if $M$ is a finitely generated $R$-module and $IM = M$
-      with $I \subset \Jac  R$, then $M = 0$.
+      with $I \subseteq \Jac  R$, then $M = 0$.
     \item Show that if $M$ is a finitely generated $R$-module, $N$ is a
       submodule of $M$ and $I\subseteq \Jac R$, then
       \[ M = IM + N \implies M = N. \]
@@ -40,7 +40,7 @@
 
 \begin{exercise} \mbox{}
   \begin{enumerate}
-    \item $f(\alpha) \in W \quad \alpha \in V$.
+    \item $f(\alpha) \in W \quad \forall \alpha \in V$.
     \item $\varphi = f^*$.
     \item For different representations of $R$,
       $R \cong \quot{k[x_1, \dots, x_n]}{I_1} \underset{\Psi^{-1}}{\overset{\Psi}{\cong}}
