--- a/main.tex
+++ b/main.tex
@@ -190,6 +190,8 @@
 \newcommand{\Rbx}{\mathbb{R}^\times}
 \newcommand{\Cbx}{\mathbb{C}^\times}
 \newcommand{\Hbx}{\mathbb{H}^\times}
+\newcommand{\Ic}{\mathcal{I}}
+\newcommand{\Vc}{\mathcal{V}}
 \newcommand{\Gc}{\mathcal{G}}
 \newcommand{\Fc}{\mathcal{F}}
 \newcommand{\Cc}{\mathcal{C}}
