Update hw week11

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -346,6 +346,7 @@
 \include{week8}
 \include{week9}
 \include{week10}
+\include{week11}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
