Update hw week11

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -238,6 +238,7 @@
 %
 \DeclareMathOperator{\Jac}{Jac}
 \DeclareMathOperator{\Spec}{Spec}
+\DeclareMathOperator{\LT}{LT}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
