--- a/commutative/week3.tex
+++ b/commutative/week3.tex
@@ -1,7 +1,70 @@
 %! TEX root=../main.tex
 \subsection{Gr\"{o}bner basis}
 
+\subsubsection{Division algorithm in $K[X_1,\dots,X_n]$}
+
+\begin{example}
+  $I = \langle xy-1,y^2-1\rangle \subseteq K[x,y]$, $f_1 = xy-1$ and $f_2 = y^2-1$ $G=\{f_1,f_2\}$. Does $f = x^2y+xy^2+y^2 \in I?$
+  \begin{itemize}
+      \item Choose a lexicographic monomial ordering: $x > y$
+      \item The multidegree $\partial(f) = (2,1)$, $\partial(f_1 = (1,1))$, $\partial(f_2) = (0,2)$
+      \item The leading term $LT(f) = x^2y$, $LT(f_1) = xy$, $LT(f_2) = y^2$
+      \item $LT(f) = xLT(f_1) \Rightarrow f = xf_1+xy^2+y^2+x \Rightarrow f = \underset{h_1}{(x+y)}f_1+\underset{h_2}{(1)}f_2+\underset{\bar{f}^G}{(x+y+1)}$ or $f = \underset{h_1}{x}f_1+\underset{h_2}{(x+1)}f_2+\underset{\bar{f}^G}{(2x+1)}$.
+  \end{itemize}
+  Note:  Divisor $h_1$, $h_2$ and remainder $\bar{f}^G$ are not unique!! 
+\end{example}
+
+\begin{definition}
+  Fix a monomial ordering and let I be an ideal of $K[X_1,\dots,X_n]$. The ideal of leading terms in I is defined to be $LT(I) = \langle LT(f)|f\in I \rangle$.
+\end{definition}
+
+\begin{remark}
+  Let $I = \langle f_1,\dots,f_n \rangle$. In general, $\langle LT(f_1),\dots,LT(f_n) \subsetneq LT(I)$.
+\end{remark}
+
+\begin{example}
+  Let $f_1=xy^2+y$, $f_2=xy^2$. And, $xf_1+yf_2=xy \in \langle f_1,f_2 \rangle$ but $xy \notin \langle xy^2, x^2y \rangle$.
+\end{example}
+
+\begin{definition}
+  $G = \Set{g_1,\dots,g_m}$ is called a Gr\"{o}bner basis of I if $I = \langle g_1,\dots,g_m \rangle$ and $LT(I) = \langle LT(g_1),\dots,LT(g_m) \rangle$
+\end{definition}
+
+\begin{prop}
+  $LT(I) = \langle LT(g_1),\dots,LT(g_m) \rangle \Rightarrow I = \langle g_1,\dots,g_m \rangle$
+  \begin{proof}
+    $\forall f \in I$, do division process. Then $f = \overset{m}{\underset{i = 1}{\sum}} h_ig_i+r$, either $r=0$ or \uline{$\bigstar = \text{no term of r is divisible}$ by any of $LT(g_1),\dots,LT(g_m)$}. Assume $r \neq 0$, then $r = f - \overset{m}{\underset{i = 1}{\sum}} h_i g_i \in I \Rightarrow LT(r) \in LT(I) = \langle LT(g_1),\dots, LT(g_m) \rangle$, a contradiction. Hence, r = 0 (i.e. $f\in \langle g_1,\dots,g_m \rangle$).
+  \end{proof}
+\end{prop}
+
+\begin{theorem} \label{thm:Grobner_existense}
+  Eaach ideal I has a Gr\"{o}bner basis.
+  \begin{proof}
+    By Hilbert basis thm, $LT(I) = \langle f_1,\dots,f_m \rangle$ for some $f_i$'s. Write $f_i = \overset{m_i}{\underset{j = 1}{\sum}}h_{ij}LT(g_{ij})$ $h_{ij} \in K[X_1,\dots,X_mj]$, $g_{ij} \in I$. Then $LT(I) = \langle LT(g_{ij}) \rangle$ $i=1,\dots,m$ $j=1,\dots,m_i$.
+  \end{proof}
+\end{theorem}
+
+\begin{theorem} \label{thm:Grobner_property}
+  Let $G = \Set{g_1,\dots,g_m}$ be a Gr\"{o}ner basis of I, then
+  \begin{itemize}
+    \item $\forall \in K[X_1,\dots,X_n]$, $f = f_I + r$ where $f_I,r$ are unique.
+      \begin{proof}
+        By division algorithm, $f = f_I +\underset{\bigstar}{r} = f'_I+\underset{\bigstar}{r'}$, then $\underset{\bigstar}{r-r'} = f_I-f'_I$. But if $r-r' \neq 0$, then $LT(r-r') \in LT(I) = \langle LT(g_1,\dots,g_2) \rangle$, a contradiction. Hence, $r-r' = 0\Rightarrow f_I = f'_I$.
+      \end{proof}
+    \item $f \in I \iff r=0$.
+      \begin{proof}
+        Suppose $f \in I$, then $f = f_I + \underset{\bigstar}{r}$, and if $r\neq 0$ $\underset{\bigstar}{r} = f - f_I\in I$, a contradiction. Hence, r = 0. Conversly, if $r = 0$, $f = f_I \in I$. 
+      \end{proof}
+  \end{itemize}
+\end{theorem}
+
+
+
 \subsubsection{Buchberger's algorithm}
+
+\begin{definition}
+  Let $f,g \in K[X_1,\dots,X_n]$ and $M$ be the monic least common multiple of LT(f) and LT(g). $S(f,g) = \frac{M}{LT(f)}f- \frac{M}{LT(g)}g$ is called an S-polynomial of f, g.
+\end{definition}
 
 Let $I = \langle g_1, \dots, g_m \rangle$ and $G = \Set{ g_1, \dots, g_m }$.
 A Gr\"{o}ner basis of $I$ can be constructed by the following algorithm:
@@ -11,13 +74,65 @@ A Gr\"{o}ner basis of $I$ can be constructed by the following algorithm:
     until once $G_{i+1} = G_i$, then $G_i$ is a Gr\"{o}ner basis.
 \end{enumerate}
 
-\begin{lemma}
+\begin{lemma} \label{lemma:sum-of-equal-degree-f-is-less}
   Let $f_1, \dots, f_m \in K[x_1, \dots, x_n]$ with $a_1, \dots, a_m \in K$ satisfy
-  $\partial(f_1) = \partial(f_2) = \dots = \partial(f_m) = \alpha$ and $\partial\big( \sum_{i = 1}^m a_i f_i \big) < \alpha$.
+  $\partial(f_1) = \partial(f_2) = \dots = \partial(f_m) = \alpha$ and $h =\sum_{i = 1}^m a_i f_i $ with $\partial(h) < \alpha$.
   Then $h = \sum_{i = 2}^m b_i S(f_{i-1}, f_i)$ for some $b_i \in K$.
+  \begin{proof}
+    Write $f_i = c_if'_i$ with $c_i \in K$ and $f'_i$ being monic of multidegree = $\alpha$. Note: $S(f_i, f_j) = f'_1 - f'_2$. Then, 
+    \begin{equation}
+      \begin{split}
+        h &= \overset{m}{\underset{i = 1}{\sum}} \big( a_ic_if'_i \big) \\
+        &= a_1c_1(f'_1-f'_2) + (a_1c_1+a_2c_2)(f'_2-f'_3) + \dots+ (a_1c_1 + \dots + a_{m-1}c_{m-1})(f'_{m-1}-f'_m) \\
+        &+ (a_1c_1+\dots+a_mc_m)f'_m \\
+        &= \overset{m}{\underset{i = 2}{\sum}}b_iS(f_{i-1},f_i) + b_{m+1}f'_m\text{ with }b_i = \sum_{1}^{i-1}a_1c_1.
+      \end{split}
+    \end{equation}
+      Also, $b_{m+1} = 0$ , since $\partial(h) < \alpha$, $\partial(\overset{m}{\underset{i = 2}{\sum}}b_iS(f_{i-1},f_i) ) < \alpha$ and $\partial(f'_m) = \alpha$. Then, we have $h = \sum_{i = 2}^m b_i S(f_{i-1}, f_i)$.
+  \end{proof}
 \end{lemma}
 
 \begin{theorem}[Buchberger's criterion]
   Assume $I = \langle g_1, \dots, g_m \rangle$, then
   $G = \Set{g_1, \dots, g_m}$ is a Gr\"{o}bner basis of $I$ $\iff$ $S(g_i, g_j) \equiv 0 \pmod{G}$ for each $i, j$.
+  \begin{proof}
+    \begin{description} [leftmargin=0cm,labelindent=0cm]
+      \item
+      \item[$\cdot$] Suppose G is a Gr\"{o}bner basis of I. $S(g_i, g_j) \in I \Rightarrow S(g_i, g_j) = 0$ by thm~\ref{thm:Grobner_property}.
+      \item[$\cdot$] Converely, suppose $S(g_i, g_j) \equiv 0$ (mod G) $\forall i, j$. For $f \in I$, $f \underset{not\ division}{=} \overset{m}{\underset{i = 1}{\sum}}h_ig_i$ for some $h_i \in K[X_1,\dots,X_2]$. Define $\alpha = max\{\partial(h_1g_1),\dots,\partial(h_mg_m)\}$. We have $\partial(f) \leq \alpha$ and we can select an expression $f = \overset{m}{\underset{i = 1}{\sum}}h_ig_i$ for f s.t $\alpha$ is minimal.
+      \item[] \uline{Claim}:   $\partial(f) = \alpha$
+      \item (pf) Rewrite,
+          \begin{equation}
+            \begin{split}f &= \overset{m}{\underset{i = 1}{\sum}}h_ig_i \\
+              &= \underset{\partial(h_ig_i) = \alpha}{\sum}h_ig_i +  \underset{\partial(h_ig_i) < \alpha}{\sum}h_ig_i \\
+              &= \underset{\partial(h_ig_i) = \alpha}{\sum}LT(h_i)g_i + \underset{\partial(h_ig_i) = \alpha}{\sum}(h_i-LT(h_i)g_i) + \underset{\partial(h_ig_i) < \alpha}{\sum}{h_ig_i}
+            \end{split}
+          \end{equation}
+          Let $LT(h_i) = a_ih_i^0$ with $h_i^0$ being a monic monomial. Comparing the multidegree on both side, $\partial\left(\underset{\partial(h_ig_i) = \alpha}{\sum}a_ih_i^0g_i\right) < \alpha$ By lemma~\ref{lemma:sum-of-equal-degree-f-is-less}, $\underset{\partial(h_ig_i) = \alpha}{\sum}\left(a_ih_i^0g_i\right) = c_{12}S(h_{i_1}^0g_{i_1},h_{i_2}^0g_{i_2}) + \dots$(finite) where $\partial(h_{i_1}g_{i_1}) = \partial(h_{i_2}g_{i_2}) = \dots = \alpha $. By def, if we set $\beta_{st} = M_{st} =$ the monic lcm of $LT(g_{i_s}), LT(g_{i_t})$, then
+          \begin{equation}
+            \begin{split}
+              S(h_{i_s}^0g_{i_s}, h_{i_t}^0g_{i_t}) &= \frac{X^\alpha}{LT(h_{i_s}^0g_{i_s})}h_{i_s}^0g_{i_s} - \frac{X^\alpha}{LT(h_{i_t}g_{i_t})}h_{i_t}^0g_{i_t} \\
+              &= X^{\alpha-\beta_{st}} \left( \frac{X^{\beta_{st}}}{\bcancel{h_{i_s}^0}LT(g_{i_s})}\bcancel{h_{i_s}^0}g_{is} - \frac{X^{\beta_{st}}}{\bcancel{h_{i_t}^0}LT(g_{i_t})}\bcancel{h_{i_t}^0}g_{i_t}  \right) \\
+              &= X^{\alpha-\beta_{st}} S\left(g_{i_s},g_{i_t}\right) \\
+              &= X^{\alpha-\beta_{st}}\overset{m}{\underset{j = 1}{\sum}}{l_jg_j} \text{ (by division)}
+            \end{split}
+          \end{equation}
+      \item Then, $\partial(l_jg_j) < \beta_{st} \Rightarrow \partial(f) \geq \alpha$. Therefore, $\partial(f) = \alpha \Rightarrow LT(f) = \underset{\partial(h_ig_i) = \alpha}{\sum}LT(h_i)LT(g_i) \Rightarrow LT(f) \in \langle LT(g_1,\dots, LT(g_m \rangle$.
+ 
+    \end{description}
+  \end{proof}
+\end{theorem}
+
+\begin{theorem}
+  The Buchberger's algorithm will terminate
+  \begin{proof}
+    $.$
+    \begin{itemize}
+      \item $\langle LT(G_i) \rangle \subsetneq \langle LT(G_{i+1}) \rangle$ if $G_i \neq G_{i+1}$
+        \[
+          G_i \neq G_{i+1} \Rightarrow \exists f, g \in G_i \text{ s.t. } S(f,g) \cancel{\equiv} 0 \text{(mod G) } \Rightarrow LT(S(s,g)) \notin \langle LT(G_i) \rangle
+        \]
+      \item $\langle LT(G_0) \rangle \subsetneq \langle LT(G_1) \rangle \subsetneq \dots$ (Noetherian ACC condition).
+    \end{itemize}
+  \end{proof}
 \end{theorem}
